# lifeline-ai

./: .eslintrc.json  .gitignore  .prettierrc.json  COMPLETION_SUMMARY.md  PROJECT_INDEX.md  README.md  SETUP_CHECKLIST.md  middleware.ts  next.config.js  package-lock.json  package.json  render.yaml  tsconfig.json
ai-services/: .flake8  README.md  pyproject.toml  requirements.txt
app/: layout.tsx  page.tsx
app/ai/: page.tsx
app/ai-assistant/: page.tsx
app/analytics/: page.tsx
app/emergency/: page.tsx
app/emergency-sos/: page.tsx
app/live-tracking/: page.tsx
app/login/: page.tsx
app/patient-history/: page.tsx
app/register/: page.tsx
backend/: .eslintrc.json  README.md  jest.config.js  package-lock.json  package.json  tsconfig.json
backend/src/: index.ts
components/: EmergencyCommandCenter.tsx  HealthMonitoringSection.tsx
components/ai/: AIHealthAssistantPage.tsx  HealthForm.tsx  HealthInsights.tsx  HealthScoreCard.tsx  MetricCard.tsx  Recommendations.tsx
components/dashboard/: BloodBank.tsx  DashboardLayout.tsx  HealthMonitoringSection.tsx  HeroDashboard.tsx  NearbyHospitals.tsx  RecentAlerts.tsx
components/emergency/: EmergencySOSDashboard.tsx  HealthAnalytics.tsx  LifelineDashboardSections.tsx  LifelineMedicalSections.tsx  SOSQuickRequest.tsx
components/layout/: Header.tsx  Sidebar.tsx
components/livetracking/: LiveTrackingBottom.jsx  Livetrackingpage.tsx
components/navbar/: LifeLineNavbar.tsx
components/patient-history/: DashboardMiddleSection.tsx  HealthAnalytics.tsx  HealthAnalyticsSection.tsx  PateintHistory.tsx  PatientMiddleSection.tsx  (+1 more)
context/: AuthContext.tsx
devops/: .env.example  Dockerfile.ai-services  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml
docs/: API_SPECIFICATION.md  ARCHITECTURE.md  ARCHITECTURE_SUMMARY.md  DATABASE_SCHEMA.md  DEVELOPMENT_GUIDE.md
frontend/: .eslintrc.json  README.md  jest.config.js  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
lib/: api.ts  groq.ts  healthCalculations.ts  patientApi.ts
shared/: README.md
styles/: globals.css
(+60 files in other folders)
